--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -14,6 +12,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - military-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
     build:
@@ -21,13 +24,35 @@ services:
       dockerfile: Dockerfile
     container_name: military-backend
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
+      # Important : Dans Docker, on utilise le nom du service 'postgres' et non localhost
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/military_recruitment
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
+      JWT_SECRET: MySuperSecretKeyForJWTTokenGenerationMustBeVeryLong1234567890
+      JWT_EXPIRATION: 86400000
     ports:
-      - "8080:8080"
+      - "8081:8081"
+    networks:
+      - military-network
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      # AJOUT CRITIQUE ICI : On passe l'URL de l'API au build
+      args:
+        VITE_API_URL: /api
+    container_name: military-frontend
+    depends_on:
+      - backend
+    ports:
+      - "3000:3000"
+    environment:
+      # L'URL API n'est pas nécessaire ici car elle est "baked-in" au build
+      - NODE_ENV=production
     networks:
       - military-network
 
