--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database Config
-spring.datasource.url=jdbc:postgresql://localhost:5433/military_recruitment
+spring.datasource.url=jdbc:postgresql://postgres:5432/military_recruitment
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -18,3 +18,18 @@ server.port=8081
 
 # Logging Level
 logging.level.com.example.militaryrecruitmentplatform=DEBUG
+
+# EMAIL CONFIGURATION (Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ton-email@gmail.com
+spring.mail.password=ton-mot-de-passe-app
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# File Upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+# Ajoute cette ligne :
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
